--- a/services/config-server/src/main/resources/configurations/discovery-server.yml
+++ b/services/config-server/src/main/resources/configurations/discovery-server.yml
@@ -1,3 +1,11 @@
 eureka:
   instance:
     hostname: localhost
+  client:
+    registerWithEureka: false
+    fetch-registry: false
+    serviceUrl:
+      defaultZone: http://${spring.eureka.instance.hostname}/${server.port}/eureka/
+
+server:
+  port: 8761
