--- a/services/config-server/src/main/resources/configurations/payment-service.yml
+++ b/services/config-server/src/main/resources/configurations/payment-service.yml
@@ -15,3 +15,6 @@ kafka:
     value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     properties:
       spring.json.type.mapping: paymentConfirmation:com.localbusiness.ecommerce.notification.PaymentNotificationRequest
+
+server:
+  port: 8060
