--- a/services/config-server/src/main/resources/configurations/customer-service.yml
+++ b/services/config-server/src/main/resources/configurations/customer-service.yml
@@ -7,5 +7,8 @@ spring:
       port: 27017
       database: customer
       authentication-database: admin
+  application:
+    config:
+      customer-url: http://localhost:8090
 server:
   port: 8090
