--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -6,11 +6,9 @@ Spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-  server:
-    port: 8070
   kafka:
     producer:
       bootstrap-servers: localhost:9092
@@ -19,9 +17,17 @@ Spring:
       properties:
         spring.json.type.mapping: orderConfirmation:com.localbusiness.ecommerce.kafka.OrderConfirmation
 
-
 application:
   config:
     customer-url: http://localhost:8222/api/v1/customers
     payment-url: http://localhost:8222/api/v1/payments
     product-url: http://localhost:8222/api/v1/products
+server:
+  port: 8070
+eureka:
+  instance:
+    instance:
+      prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
