--- a/services/order/src/main/resources/application.yml
+++ b/services/order/src/main/resources/application.yml
@@ -2,4 +2,5 @@ Spring:
   application:
     name: order-service
   config:
-    import: optional:configserver:http//localhost:8888
+    import:
+      - optional:configserver:http://localhost:8888
