--- a/services/payment/src/main/resources/application.yml
+++ b/services/payment/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring:
+Spring:
   config:
-    import: optional:configserver:http://localhost/8888
+    import:
+      - optional:configserver:http://localhost:8888
   application:
     name: payment-service
-
