--- a/services/product/src/main/resources/application.yml
+++ b/services/product/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 Spring:
   config:
-   import: optional:configserver:http://localhost:8888
+   import:
+    - optional:configserver:http://localhost:8888
   application:
     name: product-service
